# jfprrd

./: .gitignore  README.md  jfprrd.cabal  stack.yaml
glade/: main.glade
src/: JFP.hs  Main.hs
src/JFP/: Cmd.hs  Controller.hs  Model.hs  Threads.hs  Throttle.hs  Types.hs  View.hs
