name:                jfprrd
version:             0.1.0.0
synopsis:            Just Fuckin Print RRD
description:         Please see README.md
homepage:            https://github.com/githubuser/jfprrd#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

data-files: glade/main.glade

library
  ghc-options: -Wall
  default-extensions: DeriveFunctor
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiWayIf
                    , RecordWildCards
                    , TemplateHaskell
  hs-source-dirs:      src
  exposed-modules:     JFP
                     , JFP.Controller
                     , JFP.Model
                     , JFP.View
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , gtk3
                     , lens
                     , process
                     , stm
                     , temporary
                     , time
                     , transformers-base
                     , uuid
  default-language:    Haskell2010


executable jfprrd
  ghc-options: -Wall
  hs-source-dirs:      bin
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Paths_jfprrd
  build-depends:       base >= 4.7 && < 5
                     , gtk3
                     , jfprrd
